--- a/index.html
+++ b/index.html
@@ -6,36 +6,38 @@
     <title>Form</title>
 </head>
 <body>
-    <nav>
-        <img src="./images/logo.png" alt="Logo">
-    </nav>
-    <form action="">
-        <h2>Iniciar sesión</h2>
-        <label for="email">Email</label>
-        <input type="email" name="email">
-        <label for="password">Contraseña</label>
-        <input type="password" name="password">
-        <button type="submit">Continuar</button>
-        <p>¿No tienes cuenta? <a>Registrate</a></p>
-        <a href="">Continuar con Google</a>
-        <a href="">Continuar con Facebook</a>
-    </form>
-    <form action="">
-        <h2>Registrate</h2>
-        <label for="name">Nombre y Apellido</label>
-        <input type="text" name="name" id="">
-        <label for="nickname">Apodo(Opcional)</label>
-        <input type="text" name="nickname" id="">
-        <label for="age">Edad</label>
-        <input type="number" name="age" id="">
-        <label for="email">Email</label>
-        <input type="email" name="email" id="">
-        <label for="password">Contraseña</label>
-        <input type="password" name="password" id="">
-        <label for="password">Repetir contraseña</label>
-        <input type="password" name="password" id="">
-        <!-- Captcha -->
-        <button type="submit">Registrate</button>
-    </form>
+    <div>
+        <nav>
+            <img src="./images/logo.png" alt="Logo">
+        </nav>
+        <form action="">
+            <h2>Iniciar sesión</h2>
+            <label for="email">Email</label>
+            <input type="email" name="email">
+            <label for="password">Contraseña</label>
+            <input type="password" name="password">
+            <button type="submit">Continuar</button>
+            <p>¿No tienes cuenta? <a>Registrate</a></p>
+            <a href="">Continuar con Google</a>
+            <a href="">Continuar con Facebook</a>
+        </form>
+        <form action="">
+            <h2>Registrate</h2>
+            <label for="name">Nombre y Apellido</label>
+            <input type="text" name="name" id="">
+            <label for="nickname">Apodo(Opcional)</label>
+            <input type="text" name="nickname" id="">
+            <label for="age">Edad</label>
+            <input type="number" name="age" id="">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="">
+            <label for="password">Contraseña</label>
+            <input type="password" name="password" id="">
+            <label for="password">Repetir contraseña</label>
+            <input type="password" name="password" id="">
+            <!-- Captcha -->
+            <button type="submit">Registrate</button>
+        </form>
+    </div>
 </body>
 </html>
