--- a/index.html
+++ b/index.html
@@ -3,41 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Form</title>
 </head>
 <body>
-    <div>
-        <nav>
-            <img src="./images/logo.png" alt="Logo">
-        </nav>
-        <form action="">
-            <h2>Iniciar sesión</h2>
-            <label for="email">Email</label>
-            <input type="email" name="email">
-            <label for="password">Contraseña</label>
-            <input type="password" name="password">
-            <button type="submit">Continuar</button>
-            <p>¿No tienes cuenta? <a>Registrate</a></p>
-            <a href="">Continuar con Google</a>
-            <a href="">Continuar con Facebook</a>
-        </form>
-        <form action="">
-            <h2>Registrate</h2>
-            <label for="name">Nombre y Apellido</label>
-            <input type="text" name="name" id="">
-            <label for="nickname">Apodo(Opcional)</label>
-            <input type="text" name="nickname" id="">
-            <label for="age">Edad</label>
-            <input type="number" name="age" id="">
-            <label for="email">Email</label>
-            <input type="email" name="email" id="">
-            <label for="password">Contraseña</label>
-            <input type="password" name="password" id="">
-            <label for="password">Repetir contraseña</label>
-            <input type="password" name="password" id="">
-            <!-- Captcha -->
-            <button type="submit">Registrate</button>
-        </form>
+    <nav class="nav-landing">
+        <img src="./images/logo.png" alt="Logo" class="logo">
+    </nav>
+    <div class="body-landing-page">
+        <div class="form-login">
+            <form action="" class="form">
+                <div>
+                    <h2 class="form-title">Iniciar sesión</h2>
+                </div>
+                <hr>
+                <div class="form-inputs">
+                    <label for="email">Email</label>
+                    <input type="email" name="email">
+                    <label for="password">Contraseña</label>
+                    <input type="password" name="password">
+                    <button type="submit" class="btn-submit">Continuar</button>
+                    <p>¿No tienes cuenta? <a>Registrate</a></p>
+                </div>
+                <hr>
+                <div class="form-networks">
+                    <a href=""><img src="images/continuarGoogle.jpeg" alt="Continuar con Google"></a>
+                    <a href=""><img src="images/continuarFacebook.jpeg" alt="Continuar con Facebook"></a>
+                </div>
+            </form>
+        </div>
+        <div class="form-registration">
+            <form action="">
+                <h2>Registrate</h2>
+                <label for="name">Nombre y Apellido</label>
+                <input type="text" name="name" id="">
+                <label for="nickname">Apodo(Opcional)</label>
+                <input type="text" name="nickname" id="">
+                <label for="age">Edad</label>
+                <input type="number" name="age" id="">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="">
+                <label for="password">Contraseña</label>
+                <input type="password" name="password" id="">
+                <label for="password">Repetir contraseña</label>
+                <input type="password" name="password" id="">
+                <!-- Captcha -->
+                <button type="submit">Registrate</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
