--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="body-landing-page" id="body-landing-page">
         <div class="intermediateScreen">
             <div class="form-container form-container-login" id="form-container-login">
-                <form action="" class="form form-login" id="form">
+                <form action="" class="form form-login">
                     <h2>Iniciar sesión</h2>
                     <hr>
                     <div class="form-inputs">
@@ -52,18 +52,16 @@
                             <div class="form-group-input">
                                 <input type="password" name="password" class="form-input" id="password" required>
                                 <i class="fa-solid fa-circle-exclamation form-validation-state"></i>
-                                <!-- <i class="fas fa-check-circle form-validation-state"></i> -->
                             </div>
-                            <p class="form-input-error">La contraseña tiene que tener de 4 a 12 digitos, al menos un numero, una mayúscula y un signo</p>
+                            <p class="form-input-error">Debe contener de 4 a 12 dígitos y al menos un número, una mayúscula y un signo (!, ?, &, %)</p>
                         </div>
                         <div class="form-group" id="password2-group">
                             <label for="password2">Repetir contraseña*</label>
                             <div class="form-group-input">
                                 <input type="password" name="password2" class="form-input" id="password2" required>
                                 <i class="fa-solid fa-circle-exclamation form-validation-state"></i>
-                                <!-- <i class="fas fa-check-circle form-validation-state"></i> -->
                             </div>
-                            <p class="form-input-error">Ambas contraseñas deben coincidir</p>
+                            <p class="form-input-error form-input-error2">Ambas contraseñas deben coincidir</p>
                         </div>
                         <img src="./images/captcha.jpg" alt="Captcha" class="img-captcha">
                         <div>
