--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="body-landing-page" id="body-landing-page">
         <div class="intermediateScreen">
             <div class="form-container form-container-login" id="form-container-login">
-                <form action="" class="form form-login">
+                <form action="home.html" method="post" class="form form-login">
                     <h2>Iniciar sesión</h2>
                     <hr>
                     <div class="form-inputs">
@@ -29,13 +29,13 @@
                     </div>
                     <hr>
                     <div class="form-networks">
-                        <a href=""><img src="images/continuarGoogle.jpeg" alt="Continuar con Google"></a>
-                        <a href=""><img src="images/continuarFacebook.jpeg" alt="Continuar con Facebook"></a>
+                        <a href="home.html"><img src="images/continuarGoogle.jpeg" alt="Continuar con Google"></a>
+                        <a href="home.html"><img src="images/continuarFacebook.jpeg" alt="Continuar con Facebook"></a>
                     </div>
                 </form>
             </div>
             <div class="form-container form-container-signUp" id="form-container-signUp">
-                <form action="" class="form form-signUp">
+                <form action="home.html" method="post" class="form form-signUp">
                     <h2>Registrate</h2>
                     <p>¿Ya tienes cuenta? <a href="#" id="logIn">Ingresá</a></p>
                     <div class="form-inputs">
@@ -64,7 +64,7 @@
                             <p class="form-input-error form-input-error2">Ambas contraseñas deben coincidir</p>
                         </div>
                         <img src="./images/captcha.jpg" alt="Captcha" class="img-captcha">
-                        <div>
+                        <div class="form-group">
                             <button type="submit" class="btn-submit">Registrate</button>
                             <p class="success-msg" id="success-msg">Formulario enviado exitosamente!</p>
                         </div>
