--- a/home.html
+++ b/home.html
@@ -148,37 +148,151 @@
                 </div>
             </div>
            
-            <div>
-                <h3>Acción</h3>
-                <!-- <div>
-                    <div>
-                        <div class="card" style="width: 18rem;">
-                            <img src="./images/ACCION/Extinction.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="container-carrousel">
+                <div>
+                    <h3>Acción</h3>
+                    <!-- <div>
+                        <div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="./images/ACCION/Extinction.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
                             </div>
                         </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div> -->
+                </div>
+                <div class="carrousel">
+                    <h3>Cartas</h3>
+                    <div class="carrousel-cards">
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-hover">
+                                    <h3>Chinchón</h3>
+                                    <hr class="card-hr">
+                                    <p>Juego de cartas cuyo objetivo es combinar tus 7 cartas en series de escaleras del mismo palo o en grupos de 3 o más cartas</p>
+                                </div>
+                                <img src="images/CARTAS/Chinchón.jpg" alt="Chinchón" class="img">
+                            </div>
+                            <button class="btn btn-jugar">Jugar</button>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-hover">
+                                    <h3>Solitario</h3>
+                                    <hr class="card-hr">
+                                    <p>Es un juego de cartas en el que el objetivo es apilar las cartas de la baraja en orden ascendente o descendente. ¡Asegúrate de seguir siempre con el color opuesto y diviértete!</p>
+                                </div>
+                                <img src="images/CARTAS/Solitario.jpg" alt="Solitario" class="img">
+                            </div>
+                            <button class="btn btn-jugar">Jugar</button>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-hover">
+                                    <h3>Spider</h3>
+                                    <hr class="card-hr">
+                                    <p>Para empezar a jugar, hay que saber que consta de 104 cartas y consiste en apilar las de menor valor sobre las más grandes. Las filas se forman con cartas del mismo palo y deben estar repartidas en 19 columnas y habrá algunas dadas vueltas que se irán descubriendo a medida que progrese el juego.</p>
+                                </div>
+                                <img src="images/CARTAS/spider.jpg" alt="Spider" class="img">
+                            </div>
+                            <button class="btn btn-agregar">
+                                <div class="btn-agregar-icono">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                    <i class="fa-solid fa-cart-shopping"></i>
+                                </div>
+                                <span>Agregar</span>
+                            </button>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-hover">
+                                    <h3>Uno</h3>
+                                    <hr class="card-hr">
+                                    <p>Se reparten 7 cartas a cada jugador y ganará la ronda el primero que consiga deshacerse de todas antes que el resto. Estas cartas están numeradas del 1 al 9 y son de 4 colores diferentes.</p>
+                                </div>
+                                <img src="images/CARTAS/Uno.jpg" alt="Uno" class="img">
+                            </div>
+                            <button class="btn btn-agregado">Agregado</button>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-hover">
+                                    <h3>Monopoly</h3>
+                                    <hr class="card-hr">
+                                    <p>El objetivo del juego es formar un monopolio de oferta, poseyendo todas las propiedades inmuebles que aparecen en el juego.</p>
+                                </div>
+                                <img src="images/CARTAS/Monopoly.jpg" alt="Monopoly" class="img">
+                            </div>
+                            <button class="btn btn-jugar">Jugar</button>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-hover">
+                                    <h3>Truco</h3>
+                                    <hr class="card-hr">
+                                    <p>Para ganar se deben sumar una cantidad determinada de puntos, a veces se dividen en etapas.</p>
+                                </div>
+                                <img src="images/CARTAS/Truco.jpg" alt="Truco" class="img">
+                            </div>
+                            <button class="btn btn-jugar">Jugar</button>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <div class="card-hover">
+                                    <h3>Poker</h3>
+                                    <hr class="card-hr">
+                                    <p>Es un juego de apuestas en el que los jugadores, con todas o parte de sus cartas ocultas, hacen apuestas sobre una puja inicial, recayendo la suma total de las apuestas en el jugador o jugadores con la mejor combinación de cartas</p>
+                                </div>
+                                <img src="images/CARTAS/Poker.jpg" alt="Poker" class="img">
+                            </div>
+                            <button class="btn btn-agregar">
+                                <div class="btn-agregar-icono">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                    <i class="fa-solid fa-cart-shopping"></i>
+                                </div>
+                                <span>Agregar</span>
+                            </button>
+                        </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div> -->
+                </div>
+                <div>
+                    <h3>Carreras</h3>
+
+                </div>
+                <div>
+                    <h3>Clásicos</h3>
+
+                </div>
+                <div>
+                    <h3>Deportes</h3>
+
+                </div>
+                <div>
+                    <h3>Educativos</h3>
+
+                </div>
+                <div>
+                    <h3>Estrategia</h3>
+
+                </div>
+                <div>
+                    <h3>Memoria</h3>
+
+                </div>
             </div>
-            <h3>Cartas</h3>
-            <h3>Carreras</h3>
-            <h3>Clásicos</h3>
-            <h3>Deportes</h3>
-            <h3>Educativos</h3>
-            <h3>Estrategia</h3>
-            <h3>Memoria</h3>
-        </div>
+
+            </div>
         <footer class="footer-content">
             <div>
                 <img src="./images/logo.png" alt="Logo" class="logo">
