--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </form>
             </div>
             <div class="form-container form-container-signUp" id="form-container-signUp">
-                <form action="home.html" method="post" class="form form-signUp">
+                <form action="home.html" method="post" class="form form-signUp" ">
                     <h2>Registrate</h2>
                     <p>¿Ya tienes cuenta? <a href="#" id="logIn">Ingresá</a></p>
                     <div class="form-inputs">
@@ -65,7 +65,7 @@
                         </div>
                         <img src="./images/captcha.jpg" alt="Captcha" class="img-captcha">
                         <div class="form-group">
-                            <button type="submit" class="btn-submit">Registrate</button>
+                            <button type="submit" class="btn-submit" onsubmit="validatePassword2()">Registrate</button>
                             <p class="success-msg" id="success-msg">Formulario enviado exitosamente!</p>
                         </div>
                     </div>
